--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 	<packaging>war</packaging>
 	<name>SpringBootMicrowService-1</name>
 	<description>EurekaServerRegistration</description>
+	
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -42,6 +43,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>docker-jenkins-integration-sample</finalName>
 	</build>
 
 </project>
